@@ -22,6 +22,7 @@
 #include "global.h"
 #include "BoxBuilding.h"
 #include "PyramidBuilding.h"
+#include "BaseBuilding.h"
 #include "Teleporter.h"
 #include "WallObstacle.h"
 #include "Flag.h"
@@ -75,6 +76,7 @@ class World {
     const WallObstacles	&getWalls() const;
     const BoxBuildings&	getBoxes() const;
     const PyramidBuildings& getPyramids() const;
+    const BaseBuildings &getBases() const;
     const Teleporters&	getTeleporters() const;
     const Teleporter*	getTeleporter(int source, int& face) const;
     int			getTeleporter(const Teleporter*, int face) const;
@@ -129,6 +131,7 @@ class World {
     float		bases[NumTeams][9];
     BoxBuildings	boxes;
     PyramidBuildings	pyramids;
+    BaseBuildings	basesR;
     Teleporters		teleporters;
     WallObstacles	walls;
     int*		teleportTargets;
@@ -140,6 +143,7 @@ class World {
     FlagWarpSceneNode**	flagWarpNodes;
     EighthDimSceneNode** boxInsideNodes;
     EighthDimSceneNode** pyramidInsideNodes;
+    EighthDimSceneNode** baseInsideNodes;
     static World*	playingField;
     static const int	maxDeadPlayers;
 };
@@ -165,6 +169,7 @@ class WorldBuilder {
     void		append(const WallObstacle&);
     void		append(const BoxBuilding&);
     void		append(const PyramidBuilding&);
+    void		append(const BaseBuilding&);
     void		append(const Teleporter&);
     void		setTeleporterTarget(int source, int target);
     void		setBase(TeamColor team,
@@ -339,6 +344,11 @@ inline const float*	World::getBase(int team) const
 inline const WallObstacles&	World::getWalls() const
 {
   return walls;
+}
+
+inline const BaseBuildings&	World::getBases() const
+{
+  return basesR;
 }
 
 inline const BoxBuildings&	World::getBoxes() const
