@@ -37,6 +37,7 @@ BZFlag 1.7e3
 * networking code fixes - Tim Riker, Frank Thilo, etc.
 * new admin commands - Tim Riker
 * enhance SR - Tim Riker, Dave Brosius
+* rotated/elevated bases - David Trowbridge, Tim Riker
 
 
 BZFlag 1.7e2
